--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
               <p class='description'><span title='package description'>All packages within @khai96x</span></p>
             </article>
           </li>
+          <li class='child' data-name="@khai96x/bump-package-versions" data-version="0.0.0" data-description="Bump \" version\" field of multiple package.json files" data-route="bump-package-versions/index.html" data-npm="https://www.npmjs.com/package/@khai96x/bump-package-versions">
+            <article>
+              <a class='link name' target='@khai96x/bump-package-versions' href='bump-package-versions/index.html'>@khai96x/bump-package-versions</a>
+              <span class='version' title='version'>0.0.0</span>
+              <a class='npm' title='npm page' target='_blank' href='https://www.npmjs.com/package/@khai96x/bump-package-versions'>[npm]</a>
+              <p class='description'><span title='package description'>Bump "version" field of multiple package.json files</span></p>
+            </article>
+          </li>
           <li class='child' data-name="@khai96x/interval-observable-universe" data-version="0.0.2" data-description="A pool of interval observable" data-route="interval-observable-universe/index.html" data-npm="https://www.npmjs.com/package/@khai96x/interval-observable-universe">
             <article>
               <a class='link name' target='@khai96x/interval-observable-universe' href='interval-observable-universe/index.html'>@khai96x/interval-observable-universe</a>
