--- a/all/index.html
+++ b/all/index.html
@@ -76,10 +76,34 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-enum tsd-is-external">
+						<a href="enums/changetype.html" class="tsd-kind-icon">Change<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-is-external">
+						<a href="enums/exitstatus.html" class="tsd-kind-icon">Exit<wbr>Status</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-is-external">
+						<a href="enums/releasetype.html" class="tsd-kind-icon">Release<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-is-external">
 						<a href="enums/status.html" class="tsd-kind-icon">Status</a>
 					</li>
 					<li class=" tsd-kind-class tsd-is-external">
 						<a href="classes/statusdiff.html" class="tsd-kind-icon">Status<wbr>Diff</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/console.html" class="tsd-kind-icon">Console</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-has-type-parameter tsd-is-external">
+						<a href="interfaces/options.html" class="tsd-kind-icon">Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-has-type-parameter tsd-is-external">
+						<a href="interfaces/process.html" class="tsd-kind-icon">Process</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-external">
+						<a href="globals.html#semver" class="tsd-kind-icon">Sem<wbr>Ver</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="globals.html#diffs" class="tsd-kind-icon">diffs</a>
@@ -117,8 +141,17 @@
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="globals.html#analyzeacpioutput" class="tsd-kind-icon">analyze<wbr>Acpi<wbr>Output</a>
 					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
+						<a href="globals.html#bumppackageversions" class="tsd-kind-icon">bump<wbr>Package<wbr>Versions</a>
+					</li>
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="globals.html#checkstatus" class="tsd-kind-icon">check<wbr>Status</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#getreleasetype" class="tsd-kind-icon">get<wbr>Release<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#incsemver" class="tsd-kind-icon">inc<wbr>Sem<wbr>Ver</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
 						<a href="globals.html#pipeline" class="tsd-kind-icon">pipeline</a>
