--- a/all/classes/statusdiff.html
+++ b/all/classes/statusdiff.html
@@ -104,7 +104,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/54241fd/packages/my-observables/lib/ac-adapter.ts#L34">my-observables/lib/ac-adapter.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/b58f2f0/packages/my-observables/lib/ac-adapter.ts#L34">my-observables/lib/ac-adapter.ts:34</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -129,7 +129,7 @@
 					<div class="tsd-signature tsd-kind-icon">new<wbr>Status<span class="tsd-signature-symbol">:</span> <a href="../enums/status.html" class="tsd-signature-type">Status</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/54241fd/packages/my-observables/lib/ac-adapter.ts#L37">my-observables/lib/ac-adapter.ts:37</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/b58f2f0/packages/my-observables/lib/ac-adapter.ts#L37">my-observables/lib/ac-adapter.ts:37</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -139,7 +139,7 @@
 					<div class="tsd-signature tsd-kind-icon">old<wbr>Status<span class="tsd-signature-symbol">:</span> <a href="../enums/status.html" class="tsd-signature-type">Status</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/54241fd/packages/my-observables/lib/ac-adapter.ts#L36">my-observables/lib/ac-adapter.ts:36</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/b58f2f0/packages/my-observables/lib/ac-adapter.ts#L36">my-observables/lib/ac-adapter.ts:36</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -155,6 +155,15 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum tsd-is-external">
+						<a href="../enums/changetype.html" class="tsd-kind-icon">Change<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-is-external">
+						<a href="../enums/exitstatus.html" class="tsd-kind-icon">Exit<wbr>Status</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-is-external">
+						<a href="../enums/releasetype.html" class="tsd-kind-icon">Release<wbr>Type</a>
+					</li>
 					<li class=" tsd-kind-enum tsd-is-external">
 						<a href="../enums/status.html" class="tsd-kind-icon">Status</a>
 					</li>
@@ -176,6 +185,21 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="../interfaces/console.html" class="tsd-kind-icon">Console</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="../interfaces/filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-has-type-parameter tsd-is-external">
+						<a href="../interfaces/options.html" class="tsd-kind-icon">Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-has-type-parameter tsd-is-external">
+						<a href="../interfaces/process.html" class="tsd-kind-icon">Process</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-external">
+						<a href="../globals.html#semver" class="tsd-kind-icon">Sem<wbr>Ver</a>
+					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="../globals.html#diffs" class="tsd-kind-icon">diffs</a>
 					</li>
@@ -212,8 +236,17 @@
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="../globals.html#analyzeacpioutput" class="tsd-kind-icon">analyze<wbr>Acpi<wbr>Output</a>
 					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
+						<a href="../globals.html#bumppackageversions" class="tsd-kind-icon">bump<wbr>Package<wbr>Versions</a>
+					</li>
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="../globals.html#checkstatus" class="tsd-kind-icon">check<wbr>Status</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="../globals.html#getreleasetype" class="tsd-kind-icon">get<wbr>Release<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="../globals.html#incsemver" class="tsd-kind-icon">inc<wbr>Sem<wbr>Ver</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
 						<a href="../globals.html#pipeline" class="tsd-kind-icon">pipeline</a>
