--- a/all/enums/releasetype.html
+++ b/all/enums/releasetype.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>FileSystem | @khai96x/bump-package-versions — Reference</title>
+	<title>ReleaseType | @khai96x/all — Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@khai96x/bump-package-versions — Reference</a>
+					<a href="../index.html" class="title">@khai96x/all — Reference</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -54,97 +54,62 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="filesystem.html">FileSystem</a>
+					<a href="releasetype.html">ReleaseType</a>
 				</li>
 			</ul>
-			<h1>Interface FileSystem</h1>
+			<h1>Enumeration ReleaseType</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<section class="tsd-panel tsd-hierarchy">
-				<h3>Hierarchy</h3>
-				<ul class="tsd-hierarchy">
-					<li>
-						<span class="target">FileSystem</span>
-					</li>
-				</ul>
-			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section ">
-							<h3>Methods</h3>
+						<section class="tsd-index-section tsd-is-external">
+							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="filesystem.html#readfile" class="tsd-kind-icon">read<wbr>File</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="filesystem.html#writefile" class="tsd-kind-icon">write<wbr>File</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external"><a href="releasetype.html#major" class="tsd-kind-icon">Major</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external"><a href="releasetype.html#minor" class="tsd-kind-icon">Minor</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external"><a href="releasetype.html#patch" class="tsd-kind-icon">Patch</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Methods</h2>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface">
-					<a name="readfile" class="tsd-anchor"></a>
-					<h3>read<wbr>File</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
-						<li class="tsd-signature tsd-kind-icon">read<wbr>File<span class="tsd-signature-symbol">(</span>filename<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, encoding<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">"utf8"</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/b58f2f0/packages/bump-package-versions/index.ts#L41">index.ts:41</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>filename: <span class="tsd-signature-type">string</span></h5>
-								</li>
-								<li>
-									<h5>encoding: <span class="tsd-signature-type">"utf8"</span></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span>
-								<span class="tsd-signature-symbol"> | </span>
-								<span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span>
-							</h4>
-						</li>
-					</ul>
+			<section class="tsd-panel-group tsd-member-group tsd-is-external">
+				<h2>Enumeration members</h2>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
+					<a name="major" class="tsd-anchor"></a>
+					<h3>Major</h3>
+					<div class="tsd-signature tsd-kind-icon">Major<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;major&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/b58f2f0/packages/bump-package-versions/index.ts#L14">bump-package-versions/index.ts:14</a></li>
+						</ul>
+					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface">
-					<a name="writefile" class="tsd-anchor"></a>
-					<h3>write<wbr>File</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
-						<li class="tsd-signature tsd-kind-icon">write<wbr>File<span class="tsd-signature-symbol">(</span>filename<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, content<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/b58f2f0/packages/bump-package-versions/index.ts#L42">index.ts:42</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>filename: <span class="tsd-signature-type">string</span></h5>
-								</li>
-								<li>
-									<h5>content: <span class="tsd-signature-type">string</span></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span>
-								<span class="tsd-signature-symbol"> | </span>
-								<span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span>
-							</h4>
-						</li>
-					</ul>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
+					<a name="minor" class="tsd-anchor"></a>
+					<h3>Minor</h3>
+					<div class="tsd-signature tsd-kind-icon">Minor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;minor&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/b58f2f0/packages/bump-package-versions/index.ts#L15">bump-package-versions/index.ts:15</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
+					<a name="patch" class="tsd-anchor"></a>
+					<h3>Patch</h3>
+					<div class="tsd-signature tsd-kind-icon">Patch<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;patch&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/b58f2f0/packages/bump-package-versions/index.ts#L16">bump-package-versions/index.ts:16</a></li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 		</div>
@@ -158,50 +123,101 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-enum">
-						<a href="../enums/changetype.html" class="tsd-kind-icon">Change<wbr>Type</a>
+					<li class=" tsd-kind-enum tsd-is-external">
+						<a href="changetype.html" class="tsd-kind-icon">Change<wbr>Type</a>
 					</li>
-					<li class=" tsd-kind-enum">
-						<a href="../enums/exitstatus.html" class="tsd-kind-icon">Exit<wbr>Status</a>
-					</li>
-					<li class=" tsd-kind-enum">
-						<a href="../enums/releasetype.html" class="tsd-kind-icon">Release<wbr>Type</a>
-					</li>
-					<li class=" tsd-kind-interface">
-						<a href="console.html" class="tsd-kind-icon">Console</a>
+					<li class=" tsd-kind-enum tsd-is-external">
+						<a href="exitstatus.html" class="tsd-kind-icon">Exit<wbr>Status</a>
 					</li>
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-interface">
-						<a href="filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
+					<li class="current tsd-kind-enum tsd-is-external">
+						<a href="releasetype.html" class="tsd-kind-icon">Release<wbr>Type</a>
 						<ul>
-							<li class=" tsd-kind-method tsd-parent-kind-interface">
-								<a href="filesystem.html#readfile" class="tsd-kind-icon">read<wbr>File</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
+								<a href="releasetype.html#major" class="tsd-kind-icon">Major</a>
 							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-interface">
-								<a href="filesystem.html#writefile" class="tsd-kind-icon">write<wbr>File</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
+								<a href="releasetype.html#minor" class="tsd-kind-icon">Minor</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
+								<a href="releasetype.html#patch" class="tsd-kind-icon">Patch</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-interface tsd-has-type-parameter">
-						<a href="options.html" class="tsd-kind-icon">Options</a>
+					<li class=" tsd-kind-enum tsd-is-external">
+						<a href="status.html" class="tsd-kind-icon">Status</a>
 					</li>
-					<li class=" tsd-kind-interface tsd-has-type-parameter">
-						<a href="process.html" class="tsd-kind-icon">Process</a>
+					<li class=" tsd-kind-class tsd-is-external">
+						<a href="../classes/statusdiff.html" class="tsd-kind-icon">Status<wbr>Diff</a>
 					</li>
-					<li class=" tsd-kind-type-alias">
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="../interfaces/console.html" class="tsd-kind-icon">Console</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="../interfaces/filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-has-type-parameter tsd-is-external">
+						<a href="../interfaces/options.html" class="tsd-kind-icon">Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-has-type-parameter tsd-is-external">
+						<a href="../interfaces/process.html" class="tsd-kind-icon">Process</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-external">
 						<a href="../globals.html#semver" class="tsd-kind-icon">Sem<wbr>Ver</a>
 					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#diffs" class="tsd-kind-icon">diffs</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#getintervalobservable" class="tsd-kind-icon">get<wbr>Interval<wbr>Observable</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#getpluggedobservable" class="tsd-kind-icon">get<wbr>Plugged<wbr>Observable</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#getstatusdiffobservable" class="tsd-kind-icon">get<wbr>Status<wbr>Diff<wbr>Observable</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#getstatusobservable" class="tsd-kind-icon">get<wbr>Status<wbr>Observable</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#getstatuspairobservable" class="tsd-kind-icon">get<wbr>Status<wbr>Pair<wbr>Observable</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#getunpluggedobservable" class="tsd-kind-icon">get<wbr>Unplugged<wbr>Observable</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#pairs" class="tsd-kind-icon">pairs</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#plugged" class="tsd-kind-icon">plugged</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#statuses" class="tsd-kind-icon">statuses</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#unplugged" class="tsd-kind-icon">unplugged</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="../globals.html#analyzeacpioutput" class="tsd-kind-icon">analyze<wbr>Acpi<wbr>Output</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
 						<a href="../globals.html#bumppackageversions" class="tsd-kind-icon">bump<wbr>Package<wbr>Versions</a>
 					</li>
-					<li class=" tsd-kind-function">
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="../globals.html#checkstatus" class="tsd-kind-icon">check<wbr>Status</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
 						<a href="../globals.html#getreleasetype" class="tsd-kind-icon">get<wbr>Release<wbr>Type</a>
 					</li>
-					<li class=" tsd-kind-function">
+					<li class=" tsd-kind-function tsd-is-external">
 						<a href="../globals.html#incsemver" class="tsd-kind-icon">inc<wbr>Sem<wbr>Ver</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
+						<a href="../globals.html#pipeline" class="tsd-kind-icon">pipeline</a>
 					</li>
 				</ul>
 			</nav>
