--- a/all/enums/status.html
+++ b/all/enums/status.html
@@ -86,7 +86,7 @@
 					<div class="tsd-signature tsd-kind-icon">Plugged<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;Plugged&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/54241fd/packages/my-observables/lib/ac-adapter.ts#L6">my-observables/lib/ac-adapter.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/b58f2f0/packages/my-observables/lib/ac-adapter.ts#L6">my-observables/lib/ac-adapter.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -96,7 +96,7 @@
 					<div class="tsd-signature tsd-kind-icon">Unplugged<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;Unplugged&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/54241fd/packages/my-observables/lib/ac-adapter.ts#L7">my-observables/lib/ac-adapter.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/b58f2f0/packages/my-observables/lib/ac-adapter.ts#L7">my-observables/lib/ac-adapter.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -112,6 +112,15 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum tsd-is-external">
+						<a href="changetype.html" class="tsd-kind-icon">Change<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-is-external">
+						<a href="exitstatus.html" class="tsd-kind-icon">Exit<wbr>Status</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-is-external">
+						<a href="releasetype.html" class="tsd-kind-icon">Release<wbr>Type</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-enum tsd-is-external">
@@ -129,6 +138,21 @@
 				<ul class="after-current">
 					<li class=" tsd-kind-class tsd-is-external">
 						<a href="../classes/statusdiff.html" class="tsd-kind-icon">Status<wbr>Diff</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="../interfaces/console.html" class="tsd-kind-icon">Console</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="../interfaces/filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-has-type-parameter tsd-is-external">
+						<a href="../interfaces/options.html" class="tsd-kind-icon">Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-has-type-parameter tsd-is-external">
+						<a href="../interfaces/process.html" class="tsd-kind-icon">Process</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-external">
+						<a href="../globals.html#semver" class="tsd-kind-icon">Sem<wbr>Ver</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="../globals.html#diffs" class="tsd-kind-icon">diffs</a>
@@ -166,8 +190,17 @@
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="../globals.html#analyzeacpioutput" class="tsd-kind-icon">analyze<wbr>Acpi<wbr>Output</a>
 					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
+						<a href="../globals.html#bumppackageversions" class="tsd-kind-icon">bump<wbr>Package<wbr>Versions</a>
+					</li>
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="../globals.html#checkstatus" class="tsd-kind-icon">check<wbr>Status</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="../globals.html#getreleasetype" class="tsd-kind-icon">get<wbr>Release<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="../globals.html#incsemver" class="tsd-kind-icon">inc<wbr>Sem<wbr>Ver</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
 						<a href="../globals.html#pipeline" class="tsd-kind-icon">pipeline</a>
