--- a/bump-package-versions/enums/changetype.html
+++ b/bump-package-versions/enums/changetype.html
@@ -85,40 +85,40 @@
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="breakingchange" class="tsd-anchor"></a>
 					<h3>Breaking<wbr>Change</h3>
-					<div class="tsd-signature tsd-kind-icon">Breaking<wbr>Change<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;break&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">Breaking<wbr>Change<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;break&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/bump-package-versions/index.ts#L8">index.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/bump-package-versions/index.ts#L8">index.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="featureaddition" class="tsd-anchor"></a>
 					<h3>Feature<wbr>Addition</h3>
-					<div class="tsd-signature tsd-kind-icon">Feature<wbr>Addition<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;feature&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">Feature<wbr>Addition<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;feature&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/bump-package-versions/index.ts#L9">index.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/bump-package-versions/index.ts#L9">index.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="officialrelease" class="tsd-anchor"></a>
 					<h3>Official<wbr>Release</h3>
-					<div class="tsd-signature tsd-kind-icon">Official<wbr>Release<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;official&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">Official<wbr>Release<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;official&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/bump-package-versions/index.ts#L7">index.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/bump-package-versions/index.ts#L7">index.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="patch" class="tsd-anchor"></a>
 					<h3>Patch</h3>
-					<div class="tsd-signature tsd-kind-icon">Patch<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;patch&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">Patch<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;patch&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/bump-package-versions/index.ts#L10">index.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/bump-package-versions/index.ts#L10">index.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
