--- a/bump-package-versions/globals.html
+++ b/bump-package-versions/globals.html
@@ -54,7 +54,7 @@
 					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1> @khai96x/bump-package-versions — Reference</h1>
+			<h1>@khai96x/bump-package-versions — Reference</h1>
 		</div>
 	</div>
 </header>
@@ -104,10 +104,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-type-alias">
 					<a name="semver" class="tsd-anchor"></a>
 					<h3>Sem<wbr>Ver</h3>
-					<div class="tsd-signature tsd-kind-icon">Sem<wbr>Ver<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">SemVer</span></div>
+					<div class="tsd-signature tsd-kind-icon">Sem<wbr>Ver<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">semver.SemVer</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/bump-package-versions/index.ts#L4">index.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/bump-package-versions/index.ts#L4">index.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +124,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/bump-package-versions/index.ts#L70">index.ts:70</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/bump-package-versions/index.ts#L70">index.ts:70</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -147,19 +147,19 @@
 					<a name="getreleasetype" class="tsd-anchor"></a>
 					<h3>get<wbr>Release<wbr>Type</h3>
 					<ul class="tsd-signatures tsd-kind-function">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>Release<wbr>Type<span class="tsd-signature-symbol">(</span>version<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">SemVer</span>, change<span class="tsd-signature-symbol">: </span><a href="enums/changetype.html" class="tsd-signature-type">ChangeType</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="enums/releasetype.html" class="tsd-signature-type">ReleaseType</a></li>
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Release<wbr>Type<span class="tsd-signature-symbol">(</span>version<span class="tsd-signature-symbol">: </span><a href="globals.html#semver" class="tsd-signature-type">SemVer</a>, change<span class="tsd-signature-symbol">: </span><a href="enums/changetype.html" class="tsd-signature-type">ChangeType</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="enums/releasetype.html" class="tsd-signature-type">ReleaseType</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/bump-package-versions/index.ts#L19">index.ts:19</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/bump-package-versions/index.ts#L19">index.ts:19</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>version: <span class="tsd-signature-type">SemVer</span></h5>
+									<h5>version: <a href="globals.html#semver" class="tsd-signature-type">SemVer</a></h5>
 								</li>
 								<li>
 									<h5>change: <a href="enums/changetype.html" class="tsd-signature-type">ChangeType</a></h5>
@@ -173,25 +173,25 @@
 					<a name="incsemver" class="tsd-anchor"></a>
 					<h3>inc<wbr>Sem<wbr>Ver</h3>
 					<ul class="tsd-signatures tsd-kind-function">
-						<li class="tsd-signature tsd-kind-icon">inc<wbr>Sem<wbr>Ver<span class="tsd-signature-symbol">(</span>version<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">SemVer</span>, change<span class="tsd-signature-symbol">: </span><a href="enums/changetype.html" class="tsd-signature-type">ChangeType</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">SemVer</span></li>
+						<li class="tsd-signature tsd-kind-icon">inc<wbr>Sem<wbr>Ver<span class="tsd-signature-symbol">(</span>version<span class="tsd-signature-symbol">: </span><a href="globals.html#semver" class="tsd-signature-type">SemVer</a>, change<span class="tsd-signature-symbol">: </span><a href="enums/changetype.html" class="tsd-signature-type">ChangeType</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="globals.html#semver" class="tsd-signature-type">SemVer</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/bump-package-versions/index.ts#L36">index.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/bump-package-versions/index.ts#L36">index.ts:36</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>version: <span class="tsd-signature-type">SemVer</span></h5>
+									<h5>version: <a href="globals.html#semver" class="tsd-signature-type">SemVer</a></h5>
 								</li>
 								<li>
 									<h5>change: <a href="enums/changetype.html" class="tsd-signature-type">ChangeType</a></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">SemVer</span></h4>
+							<h4 class="tsd-returns-title">Returns <a href="globals.html#semver" class="tsd-signature-type">SemVer</a></h4>
 						</li>
 					</ul>
 				</section>
