--- a/interval-observable-universe/index.html
+++ b/interval-observable-universe/index.html
@@ -54,7 +54,7 @@
 					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1> @khai96x/interval-observable-universe — Reference</h1>
+			<h1>@khai96x/interval-observable-universe — Reference</h1>
 		</div>
 	</div>
 </header>
@@ -77,6 +77,9 @@
 				<ul class="before-current">
 					<li class=" tsd-kind-variable">
 						<a href="globals.html#getintervalobservable" class="tsd-kind-icon">get<wbr>Interval<wbr>Observable</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="globals.html#share" class="tsd-kind-icon">share</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
 						<a href="globals.html#pipeline" class="tsd-kind-icon">pipeline</a>
