--- a/my-observables/enums/status.html
+++ b/my-observables/enums/status.html
@@ -83,20 +83,20 @@
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
 					<a name="plugged" class="tsd-anchor"></a>
 					<h3>Plugged</h3>
-					<div class="tsd-signature tsd-kind-icon">Plugged<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;Plugged&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">Plugged<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;Plugged&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/my-observables/lib/ac-adapter.ts#L6">my-observables/lib/ac-adapter.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/my-observables/lib/ac-adapter.ts#L6">lib/ac-adapter.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
 					<a name="unplugged" class="tsd-anchor"></a>
 					<h3>Unplugged</h3>
-					<div class="tsd-signature tsd-kind-icon">Unplugged<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;Unplugged&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">Unplugged<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;Unplugged&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/my-observables/lib/ac-adapter.ts#L7">my-observables/lib/ac-adapter.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/my-observables/lib/ac-adapter.ts#L7">lib/ac-adapter.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -134,7 +134,7 @@
 						<a href="../globals.html#diffs" class="tsd-kind-icon">diffs</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#getintervalobservable" class="tsd-kind-icon">get<wbr>Interval<wbr>Observable</a>
+						<a href="../globals.html#filter" class="tsd-kind-icon">filter</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="../globals.html#getpluggedobservable" class="tsd-kind-icon">get<wbr>Plugged<wbr>Observable</a>
@@ -152,7 +152,16 @@
 						<a href="../globals.html#getunpluggedobservable" class="tsd-kind-icon">get<wbr>Unplugged<wbr>Observable</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#map" class="tsd-kind-icon">map</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#mergeall" class="tsd-kind-icon">merge<wbr>All</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="../globals.html#pairs" class="tsd-kind-icon">pairs</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#pairwise" class="tsd-kind-icon">pairwise</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="../globals.html#plugged" class="tsd-kind-icon">plugged</a>
@@ -168,9 +177,6 @@
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="../globals.html#checkstatus" class="tsd-kind-icon">check<wbr>Status</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
-						<a href="../globals.html#pipeline" class="tsd-kind-icon">pipeline</a>
 					</li>
 				</ul>
 			</nav>
