--- a/utils/index.html
+++ b/utils/index.html
@@ -54,7 +54,7 @@
 					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1> @khai96x/utils — Reference</h1>
+			<h1>@khai96x/utils — Reference</h1>
 		</div>
 	</div>
 </header>
@@ -75,6 +75,12 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-class tsd-has-type-parameter tsd-is-external">
+						<a href="classes/concatlengthresult.html" class="tsd-kind-icon">Concat<wbr>Length<wbr>Result</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-has-type-parameter tsd-is-external">
+						<a href="interfaces/iterablewithlength.html" class="tsd-kind-icon">Iterable<wbr>With<wbr>Length</a>
+					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
 						<a href="globals.html#concatwithlength" class="tsd-kind-icon">concat<wbr>With<wbr>Length</a>
 					</li>
