--- a/bump-package-versions/enums/releasetype.html
+++ b/bump-package-versions/enums/releasetype.html
@@ -84,30 +84,30 @@
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="major" class="tsd-anchor"></a>
 					<h3>Major</h3>
-					<div class="tsd-signature tsd-kind-icon">Major<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;major&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">Major<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;major&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/bump-package-versions/index.ts#L14">index.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/bump-package-versions/index.ts#L14">index.ts:14</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="minor" class="tsd-anchor"></a>
 					<h3>Minor</h3>
-					<div class="tsd-signature tsd-kind-icon">Minor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;minor&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">Minor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;minor&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/bump-package-versions/index.ts#L15">index.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/bump-package-versions/index.ts#L15">index.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="patch" class="tsd-anchor"></a>
 					<h3>Patch</h3>
-					<div class="tsd-signature tsd-kind-icon">Patch<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;patch&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">Patch<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;patch&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/bump-package-versions/index.ts#L16">index.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/bump-package-versions/index.ts#L16">index.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
