--- a/my-observables/classes/statusdiff.html
+++ b/my-observables/classes/statusdiff.html
@@ -104,7 +104,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/my-observables/lib/ac-adapter.ts#L34">my-observables/lib/ac-adapter.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/my-observables/lib/ac-adapter.ts#L34">lib/ac-adapter.ts:34</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -129,7 +129,7 @@
 					<div class="tsd-signature tsd-kind-icon">new<wbr>Status<span class="tsd-signature-symbol">:</span> <a href="../enums/status.html" class="tsd-signature-type">Status</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/my-observables/lib/ac-adapter.ts#L37">my-observables/lib/ac-adapter.ts:37</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/my-observables/lib/ac-adapter.ts#L37">lib/ac-adapter.ts:37</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -139,7 +139,7 @@
 					<div class="tsd-signature tsd-kind-icon">old<wbr>Status<span class="tsd-signature-symbol">:</span> <a href="../enums/status.html" class="tsd-signature-type">Status</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/my-observables/lib/ac-adapter.ts#L36">my-observables/lib/ac-adapter.ts:36</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/my-observables/lib/ac-adapter.ts#L36">lib/ac-adapter.ts:36</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -180,7 +180,7 @@
 						<a href="../globals.html#diffs" class="tsd-kind-icon">diffs</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#getintervalobservable" class="tsd-kind-icon">get<wbr>Interval<wbr>Observable</a>
+						<a href="../globals.html#filter" class="tsd-kind-icon">filter</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="../globals.html#getpluggedobservable" class="tsd-kind-icon">get<wbr>Plugged<wbr>Observable</a>
@@ -198,7 +198,16 @@
 						<a href="../globals.html#getunpluggedobservable" class="tsd-kind-icon">get<wbr>Unplugged<wbr>Observable</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#map" class="tsd-kind-icon">map</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#mergeall" class="tsd-kind-icon">merge<wbr>All</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="../globals.html#pairs" class="tsd-kind-icon">pairs</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#pairwise" class="tsd-kind-icon">pairwise</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="../globals.html#plugged" class="tsd-kind-icon">plugged</a>
@@ -214,9 +223,6 @@
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="../globals.html#checkstatus" class="tsd-kind-icon">check<wbr>Status</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
-						<a href="../globals.html#pipeline" class="tsd-kind-icon">pipeline</a>
 					</li>
 				</ul>
 			</nav>
