--- a/my-observables/index.html
+++ b/my-observables/index.html
@@ -54,7 +54,7 @@
 					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1> @khai96x/my-observables — Reference</h1>
+			<h1>@khai96x/my-observables — Reference</h1>
 		</div>
 	</div>
 </header>
@@ -85,7 +85,7 @@
 						<a href="globals.html#diffs" class="tsd-kind-icon">diffs</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="globals.html#getintervalobservable" class="tsd-kind-icon">get<wbr>Interval<wbr>Observable</a>
+						<a href="globals.html#filter" class="tsd-kind-icon">filter</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="globals.html#getpluggedobservable" class="tsd-kind-icon">get<wbr>Plugged<wbr>Observable</a>
@@ -103,7 +103,16 @@
 						<a href="globals.html#getunpluggedobservable" class="tsd-kind-icon">get<wbr>Unplugged<wbr>Observable</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="globals.html#map" class="tsd-kind-icon">map</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="globals.html#mergeall" class="tsd-kind-icon">merge<wbr>All</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="globals.html#pairs" class="tsd-kind-icon">pairs</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="globals.html#pairwise" class="tsd-kind-icon">pairwise</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="globals.html#plugged" class="tsd-kind-icon">plugged</a>
@@ -119,9 +128,6 @@
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="globals.html#checkstatus" class="tsd-kind-icon">check<wbr>Status</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
-						<a href="globals.html#pipeline" class="tsd-kind-icon">pipeline</a>
 					</li>
 				</ul>
 			</nav>
