--- a/utils/interfaces/iterablewithlength.html
+++ b/utils/interfaces/iterablewithlength.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Status | @khai96x/all — Reference</title>
+	<title>IterableWithLength | @khai96x/utils — Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@khai96x/all — Reference</a>
+					<a href="../index.html" class="title">@khai96x/utils — Reference</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -54,51 +54,94 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="status.html">Status</a>
+					<a href="iterablewithlength.html">IterableWithLength</a>
 				</li>
 			</ul>
-			<h1>Enumeration Status</h1>
+			<h1>Interface IterableWithLength&lt;Element&gt;</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-type-parameters">
+				<h3>Type parameters</h3>
+				<ul class="tsd-type-parameters">
+					<li>
+						<h4>Element</h4>
+					</li>
+				</ul>
+			</section>
+			<section class="tsd-panel tsd-hierarchy">
+				<h3>Hierarchy</h3>
+				<ul class="tsd-hierarchy">
+					<li>
+						<span class="tsd-signature-type">Iterable</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Element</span><span class="tsd-signature-symbol">&gt;</span>
+						<ul class="tsd-hierarchy">
+							<li>
+								<span class="target">IterableWithLength</span>
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</section>
+			<section class="tsd-panel">
+				<h3>Implemented by</h3>
+				<ul class="tsd-hierarchy">
+					<li><a href="../classes/concatlengthresult.html" class="tsd-signature-type">ConcatLengthResult</a></li>
+				</ul>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section tsd-is-external">
-							<h3>Enumeration members</h3>
+							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external"><a href="status.html#plugged" class="tsd-kind-icon">Plugged</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external"><a href="status.html#unplugged" class="tsd-kind-icon">Unplugged</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="iterablewithlength.html#length" class="tsd-kind-icon">length</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section tsd-is-inherited tsd-is-external">
+							<h3>Methods</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-method tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><a href="iterablewithlength.html#_symbol_iterator_" class="tsd-kind-icon">[<wbr>Symbol.iterator]</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-external">
-				<h2>Enumeration members</h2>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
-					<a name="plugged" class="tsd-anchor"></a>
-					<h3>Plugged</h3>
-					<div class="tsd-signature tsd-kind-icon">Plugged<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;Plugged&quot;</span></div>
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="length" class="tsd-anchor"></a>
+					<h3>length</h3>
+					<div class="tsd-signature tsd-kind-icon">length<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/my-observables/lib/ac-adapter.ts#L6">my-observables/lib/ac-adapter.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/feec1fc/packages/utils/concat-with-length.ts#L4">packages/utils/concat-with-length.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
-					<a name="unplugged" class="tsd-anchor"></a>
-					<h3>Unplugged</h3>
-					<div class="tsd-signature tsd-kind-icon">Unplugged<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;Unplugged&quot;</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/1744385/packages/my-observables/lib/ac-adapter.ts#L7">my-observables/lib/ac-adapter.ts:7</a></li>
-						</ul>
-					</aside>
+			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-inherited tsd-is-external">
+				<h2>Methods</h2>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface tsd-is-inherited tsd-is-external">
+					<a name="_symbol_iterator_" class="tsd-anchor"></a>
+					<h3>[<wbr>Symbol.iterator]</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface tsd-is-inherited tsd-is-external">
+						<li class="tsd-signature tsd-kind-icon">[<wbr>Symbol.iterator]<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Iterator</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Element</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<p>Inherited from <a href="iterablewithlength.html">IterableWithLength</a>.<a href="iterablewithlength.html#_symbol_iterator_">[Symbol.iterator]</a></p>
+								<ul>
+									<li>Defined in tools/docs/node_modules/.pnpm/registry.npmjs.org/typescript/3.7.3/node_modules/typescript/lib/lib.es2015.iterable.d.ts:51</li>
+								</ul>
+							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Iterator</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Element</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
 				</section>
 			</section>
 		</div>
@@ -112,98 +155,29 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-enum tsd-is-external">
-						<a href="changetype.html" class="tsd-kind-icon">Change<wbr>Type</a>
-					</li>
-					<li class=" tsd-kind-enum tsd-is-external">
-						<a href="exitstatus.html" class="tsd-kind-icon">Exit<wbr>Status</a>
-					</li>
-					<li class=" tsd-kind-enum tsd-is-external">
-						<a href="releasetype.html" class="tsd-kind-icon">Release<wbr>Type</a>
+					<li class=" tsd-kind-class tsd-has-type-parameter tsd-is-external">
+						<a href="../classes/concatlengthresult.html" class="tsd-kind-icon">Concat<wbr>Length<wbr>Result</a>
 					</li>
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-enum tsd-is-external">
-						<a href="status.html" class="tsd-kind-icon">Status</a>
+					<li class="current tsd-kind-interface tsd-has-type-parameter tsd-is-external">
+						<a href="iterablewithlength.html" class="tsd-kind-icon">Iterable<wbr>With<wbr>Length</a>
 						<ul>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
-								<a href="status.html#plugged" class="tsd-kind-icon">Plugged</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+								<a href="iterablewithlength.html#length" class="tsd-kind-icon">length</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
-								<a href="status.html#unplugged" class="tsd-kind-icon">Unplugged</a>
+							<li class=" tsd-kind-method tsd-parent-kind-interface tsd-is-inherited tsd-is-external">
+								<a href="iterablewithlength.html#_symbol_iterator_" class="tsd-kind-icon">[<wbr>Symbol.iterator]</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-class tsd-is-external">
-						<a href="../classes/statusdiff.html" class="tsd-kind-icon">Status<wbr>Diff</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-external">
-						<a href="../interfaces/console.html" class="tsd-kind-icon">Console</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-external">
-						<a href="../interfaces/filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-has-type-parameter tsd-is-external">
-						<a href="../interfaces/options.html" class="tsd-kind-icon">Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-has-type-parameter tsd-is-external">
-						<a href="../interfaces/process.html" class="tsd-kind-icon">Process</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-is-external">
-						<a href="../globals.html#semver" class="tsd-kind-icon">Sem<wbr>Ver</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#diffs" class="tsd-kind-icon">diffs</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#getintervalobservable" class="tsd-kind-icon">get<wbr>Interval<wbr>Observable</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#getpluggedobservable" class="tsd-kind-icon">get<wbr>Plugged<wbr>Observable</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#getstatusdiffobservable" class="tsd-kind-icon">get<wbr>Status<wbr>Diff<wbr>Observable</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#getstatusobservable" class="tsd-kind-icon">get<wbr>Status<wbr>Observable</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#getstatuspairobservable" class="tsd-kind-icon">get<wbr>Status<wbr>Pair<wbr>Observable</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#getunpluggedobservable" class="tsd-kind-icon">get<wbr>Unplugged<wbr>Observable</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#pairs" class="tsd-kind-icon">pairs</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#plugged" class="tsd-kind-icon">plugged</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#statuses" class="tsd-kind-icon">statuses</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="../globals.html#unplugged" class="tsd-kind-icon">unplugged</a>
-					</li>
-					<li class=" tsd-kind-function tsd-is-external">
-						<a href="../globals.html#analyzeacpioutput" class="tsd-kind-icon">analyze<wbr>Acpi<wbr>Output</a>
-					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
-						<a href="../globals.html#bumppackageversions" class="tsd-kind-icon">bump<wbr>Package<wbr>Versions</a>
+						<a href="../globals.html#concatwithlength" class="tsd-kind-icon">concat<wbr>With<wbr>Length</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
-						<a href="../globals.html#checkstatus" class="tsd-kind-icon">check<wbr>Status</a>
-					</li>
-					<li class=" tsd-kind-function tsd-is-external">
-						<a href="../globals.html#getreleasetype" class="tsd-kind-icon">get<wbr>Release<wbr>Type</a>
-					</li>
-					<li class=" tsd-kind-function tsd-is-external">
-						<a href="../globals.html#incsemver" class="tsd-kind-icon">inc<wbr>Sem<wbr>Ver</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
-						<a href="../globals.html#pipeline" class="tsd-kind-icon">pipeline</a>
+						<a href="../globals.html#tostringarray" class="tsd-kind-icon">to<wbr>String<wbr>Array</a>
 					</li>
 				</ul>
 			</nav>
