--- a/list-shell-files/interfaces/mainoptions.html
+++ b/list-shell-files/interfaces/mainoptions.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ExitStatus | @khai96x/bump-package-versions — Reference</title>
+	<title>MainOptions | @khai96x/list-shell-files — Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@khai96x/bump-package-versions — Reference</a>
+					<a href="../index.html" class="title">@khai96x/list-shell-files — Reference</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -54,49 +54,68 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="exitstatus.html">ExitStatus</a>
+					<a href="mainoptions.html">MainOptions</a>
 				</li>
 			</ul>
-			<h1>Enumeration ExitStatus</h1>
+			<h1>Interface MainOptions</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-hierarchy">
+				<h3>Hierarchy</h3>
+				<ul class="tsd-hierarchy">
+					<li>
+						<span class="target">MainOptions</span>
+					</li>
+				</ul>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Enumeration members</h3>
+							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="exitstatus.html#failure" class="tsd-kind-icon">Failure</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="exitstatus.html#success" class="tsd-kind-icon">Success</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="mainoptions.html#files" class="tsd-kind-icon">files</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="mainoptions.html#log" class="tsd-kind-icon">log</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="mainoptions.html#shells" class="tsd-kind-icon">shells</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Enumeration members</h2>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="failure" class="tsd-anchor"></a>
-					<h3>Failure</h3>
-					<div class="tsd-signature tsd-kind-icon">Failure<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 1</span></div>
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="files" class="tsd-anchor"></a>
+					<h3>files</h3>
+					<div class="tsd-signature tsd-kind-icon">files<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/bump-package-versions/index.ts#L56">index.ts:56</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/list-shell-files/index.ts#L9">index.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="success" class="tsd-anchor"></a>
-					<h3>Success</h3>
-					<div class="tsd-signature tsd-kind-icon">Success<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 0</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="log" class="tsd-anchor"></a>
+					<h3>log</h3>
+					<div class="tsd-signature tsd-kind-icon">log<span class="tsd-signature-symbol">:</span> <a href="logger.html" class="tsd-signature-type">Logger</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/bump-package-versions/index.ts#L55">index.ts:55</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/list-shell-files/index.ts#L11">index.ts:11</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="shells" class="tsd-anchor"></a>
+					<h3>shells</h3>
+					<div class="tsd-signature tsd-kind-icon">shells<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/list-shell-files/index.ts#L10">index.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -112,50 +131,29 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-enum">
-						<a href="changetype.html" class="tsd-kind-icon">Change<wbr>Type</a>
+					<li class=" tsd-kind-interface">
+						<a href="logger.html" class="tsd-kind-icon">Logger</a>
 					</li>
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-enum">
-						<a href="exitstatus.html" class="tsd-kind-icon">Exit<wbr>Status</a>
+					<li class="current tsd-kind-interface">
+						<a href="mainoptions.html" class="tsd-kind-icon">Main<wbr>Options</a>
 						<ul>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="exitstatus.html#failure" class="tsd-kind-icon">Failure</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="mainoptions.html#files" class="tsd-kind-icon">files</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="exitstatus.html#success" class="tsd-kind-icon">Success</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="mainoptions.html#log" class="tsd-kind-icon">log</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="mainoptions.html#shells" class="tsd-kind-icon">shells</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-enum">
-						<a href="releasetype.html" class="tsd-kind-icon">Release<wbr>Type</a>
-					</li>
-					<li class=" tsd-kind-interface">
-						<a href="../interfaces/console.html" class="tsd-kind-icon">Console</a>
-					</li>
-					<li class=" tsd-kind-interface">
-						<a href="../interfaces/filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-has-type-parameter">
-						<a href="../interfaces/options.html" class="tsd-kind-icon">Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-has-type-parameter">
-						<a href="../interfaces/process.html" class="tsd-kind-icon">Process</a>
-					</li>
-					<li class=" tsd-kind-type-alias">
-						<a href="../globals.html#semver" class="tsd-kind-icon">Sem<wbr>Ver</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../globals.html#bumppackageversions" class="tsd-kind-icon">bump<wbr>Package<wbr>Versions</a>
-					</li>
 					<li class=" tsd-kind-function">
-						<a href="../globals.html#getreleasetype" class="tsd-kind-icon">get<wbr>Release<wbr>Type</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../globals.html#incsemver" class="tsd-kind-icon">inc<wbr>Sem<wbr>Ver</a>
+						<a href="../globals.html#main" class="tsd-kind-icon">main</a>
 					</li>
 				</ul>
 			</nav>
