--- a/shebang/globals.html
+++ b/shebang/globals.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>@khai96x/utils — Reference</title>
+	<title>@khai96x/shebang — Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css">
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">@khai96x/utils — Reference</a>
+					<a href="index.html" class="title">@khai96x/shebang — Reference</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -54,7 +54,7 @@
 					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1>@khai96x/utils — Reference</h1>
+			<h1>@khai96x/shebang — Reference</h1>
 		</div>
 	</div>
 </header>
@@ -66,84 +66,111 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section tsd-is-external">
-							<h3>Classes</h3>
+							<h3>Variables</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-class tsd-has-type-parameter tsd-is-external"><a href="classes/concatlengthresult.html" class="tsd-kind-icon">Concat<wbr>Length<wbr>Result</a></li>
-							</ul>
-						</section>
-						<section class="tsd-index-section tsd-is-external">
-							<h3>Interfaces</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-interface tsd-has-type-parameter tsd-is-external"><a href="interfaces/iterablewithlength.html" class="tsd-kind-icon">Iterable<wbr>With<wbr>Length</a></li>
+								<li class="tsd-kind-variable tsd-is-external"><a href="globals.html#read_stream_options" class="tsd-kind-icon">READ_<wbr>STREAM_<wbr>OPTIONS</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-has-type-parameter tsd-is-external"><a href="globals.html#concatwithlength" class="tsd-kind-icon">concat<wbr>With<wbr>Length</a></li>
-								<li class="tsd-kind-function tsd-is-external"><a href="globals.html#tostringarray" class="tsd-kind-icon">to<wbr>String<wbr>Array</a></li>
+								<li class="tsd-kind-function tsd-is-external"><a href="globals.html#command" class="tsd-kind-icon">command</a></li>
+								<li class="tsd-kind-function tsd-is-external"><a href="globals.html#firstline" class="tsd-kind-icon">first<wbr>Line</a></li>
+								<li class="tsd-kind-function tsd-is-external"><a href="globals.html#shebangcommand" class="tsd-kind-icon">shebang<wbr>Command</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-external">
+				<h2>Variables</h2>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-is-external">
+					<a name="read_stream_options" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> READ_<wbr>STREAM_<wbr>OPTIONS</h3>
+					<div class="tsd-signature tsd-kind-icon">READ_<wbr>STREAM_<wbr>OPTIONS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>encoding<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">"utf8"</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol"> = { encoding: &#x27;utf8&#x27; } as const</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/shebang/first-line.ts#L4">first-line.ts:4</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-type-declaration">
+						<h4>Type declaration</h4>
+						<ul class="tsd-parameters">
+							<li class="tsd-parameter">
+								<h5>encoding<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">"utf8"</span></h5>
+							</li>
+						</ul>
+					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-external">
 				<h2>Functions</h2>
-				<section class="tsd-panel tsd-member tsd-kind-function tsd-has-type-parameter tsd-is-external">
-					<a name="concatwithlength" class="tsd-anchor"></a>
-					<h3>concat<wbr>With<wbr>Length</h3>
-					<ul class="tsd-signatures tsd-kind-function tsd-has-type-parameter tsd-is-external">
-						<li class="tsd-signature tsd-kind-icon">concat<wbr>With<wbr>Length&lt;Element&gt;<span class="tsd-signature-symbol">(</span>a<span class="tsd-signature-symbol">: </span><a href="interfaces/iterablewithlength.html" class="tsd-signature-type">IterableWithLength</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Element</span><span class="tsd-signature-symbol">&gt;</span>, b<span class="tsd-signature-symbol">: </span><a href="interfaces/iterablewithlength.html" class="tsd-signature-type">IterableWithLength</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Element</span><span class="tsd-signature-symbol">&gt;</span>, <span class="tsd-signature-symbol">...</span>more<span class="tsd-signature-symbol">: </span><a href="interfaces/iterablewithlength.html" class="tsd-signature-type">IterableWithLength</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Element</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="classes/concatlengthresult.html" class="tsd-signature-type">ConcatLengthResult</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Element</span><span class="tsd-signature-symbol">&gt;</span></li>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-external">
+					<a name="command" class="tsd-anchor"></a>
+					<h3>command</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-is-external">
+						<li class="tsd-signature tsd-kind-icon">command<span class="tsd-signature-symbol">(</span>shebang<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/utils/concat-with-length.ts#L22">packages/utils/concat-with-length.ts:22</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/shebang/command.ts#L1">command.ts:1</a></li>
 								</ul>
 							</aside>
-							<h4 class="tsd-type-parameters-title">Type parameters</h4>
-							<ul class="tsd-type-parameters">
-								<li>
-									<h4>Element</h4>
-								</li>
-							</ul>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>a: <a href="interfaces/iterablewithlength.html" class="tsd-signature-type">IterableWithLength</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Element</span><span class="tsd-signature-symbol">&gt;</span></h5>
-								</li>
-								<li>
-									<h5>b: <a href="interfaces/iterablewithlength.html" class="tsd-signature-type">IterableWithLength</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Element</span><span class="tsd-signature-symbol">&gt;</span></h5>
-								</li>
-								<li>
-									<h5><span class="tsd-flag ts-flagRest">Rest</span> <span class="tsd-signature-symbol">...</span>more: <a href="interfaces/iterablewithlength.html" class="tsd-signature-type">IterableWithLength</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Element</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">[]</span></h5>
+									<h5>shebang: <span class="tsd-signature-type">string</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="classes/concatlengthresult.html" class="tsd-signature-type">ConcatLengthResult</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Element</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></h4>
 						</li>
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-external">
-					<a name="tostringarray" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagConst">Const</span> to<wbr>String<wbr>Array</h3>
+					<a name="firstline" class="tsd-anchor"></a>
+					<h3>first<wbr>Line</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-is-external">
-						<li class="tsd-signature tsd-kind-icon">to<wbr>String<wbr>Array<span class="tsd-signature-symbol">(</span>array<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">keyof </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></li>
+						<li class="tsd-signature tsd-kind-icon">first<wbr>Line<span class="tsd-signature-symbol">(</span>filename<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/utils/to-string-array.ts#L1">packages/utils/to-string-array.ts:1</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/shebang/first-line.ts#L6">first-line.ts:6</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>array: <span class="tsd-signature-symbol">keyof </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">[]</span></h5>
+									<h5>filename: <span class="tsd-signature-type">string</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-external">
+					<a name="shebangcommand" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> shebang<wbr>Command</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-is-external">
+						<li class="tsd-signature tsd-kind-icon">shebang<wbr>Command<span class="tsd-signature-symbol">(</span>filename<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/shebang/shebang-command.ts#L3">shebang-command.ts:3</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>filename: <span class="tsd-signature-type">string</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -159,17 +186,17 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-class tsd-has-type-parameter tsd-is-external">
-						<a href="classes/concatlengthresult.html" class="tsd-kind-icon">Concat<wbr>Length<wbr>Result</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-has-type-parameter tsd-is-external">
-						<a href="interfaces/iterablewithlength.html" class="tsd-kind-icon">Iterable<wbr>With<wbr>Length</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
-						<a href="globals.html#concatwithlength" class="tsd-kind-icon">concat<wbr>With<wbr>Length</a>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="globals.html#read_stream_options" class="tsd-kind-icon">READ_<wbr>STREAM_<wbr>OPTIONS</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
-						<a href="globals.html#tostringarray" class="tsd-kind-icon">to<wbr>String<wbr>Array</a>
+						<a href="globals.html#command" class="tsd-kind-icon">command</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#firstline" class="tsd-kind-icon">first<wbr>Line</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#shebangcommand" class="tsd-kind-icon">shebang<wbr>Command</a>
 					</li>
 				</ul>
 			</nav>
