--- a/shebang/index.html
+++ b/shebang/index.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ExitStatus | @khai96x/bump-package-versions — Reference</title>
+	<title>@khai96x/shebang — Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../assets/css/main.css">
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 <header>
 	<div class="tsd-page-toolbar">
 		<div class="container">
 			<div class="table-wrap">
-				<div class="table-cell" id="tsd-search" data-index="../assets/js/search.js" data-base="..">
+				<div class="table-cell" id="tsd-search" data-index="assets/js/search.js" data-base=".">
 					<div class="field">
 						<label for="tsd-search-field" class="tsd-widget search no-caption">Search</label>
 						<input id="tsd-search-field" type="text" />
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@khai96x/bump-package-versions — Reference</a>
+					<a href="index.html" class="title">@khai96x/shebang — Reference</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -51,111 +51,41 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../globals.html">Globals</a>
-				</li>
-				<li>
-					<a href="exitstatus.html">ExitStatus</a>
+					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1>Enumeration ExitStatus</h1>
+			<h1>@khai96x/shebang — Reference</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<section class="tsd-panel-group tsd-index-group">
-				<h2>Index</h2>
-				<section class="tsd-panel tsd-index-panel">
-					<div class="tsd-index-content">
-						<section class="tsd-index-section ">
-							<h3>Enumeration members</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="exitstatus.html#failure" class="tsd-kind-icon">Failure</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="exitstatus.html#success" class="tsd-kind-icon">Success</a></li>
-							</ul>
-						</section>
-					</div>
-				</section>
-			</section>
-			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Enumeration members</h2>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="failure" class="tsd-anchor"></a>
-					<h3>Failure</h3>
-					<div class="tsd-signature tsd-kind-icon">Failure<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 1</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/bump-package-versions/index.ts#L56">index.ts:56</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="success" class="tsd-anchor"></a>
-					<h3>Success</h3>
-					<div class="tsd-signature tsd-kind-icon">Success<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 0</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/bump-package-versions/index.ts#L55">index.ts:55</a></li>
-						</ul>
-					</aside>
-				</section>
-			</section>
+			<div class="tsd-panel tsd-typography">
+				<p>This directory contains all publishable packages</p>
+			</div>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
 				<ul>
 					<li class="globals  ">
-						<a href="../globals.html"><em>Globals</em></a>
+						<a href="globals.html"><em>Globals</em></a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-enum">
-						<a href="changetype.html" class="tsd-kind-icon">Change<wbr>Type</a>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="globals.html#read_stream_options" class="tsd-kind-icon">READ_<wbr>STREAM_<wbr>OPTIONS</a>
 					</li>
-				</ul>
-				<ul class="current">
-					<li class="current tsd-kind-enum">
-						<a href="exitstatus.html" class="tsd-kind-icon">Exit<wbr>Status</a>
-						<ul>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="exitstatus.html#failure" class="tsd-kind-icon">Failure</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="exitstatus.html#success" class="tsd-kind-icon">Success</a>
-							</li>
-						</ul>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#command" class="tsd-kind-icon">command</a>
 					</li>
-				</ul>
-				<ul class="after-current">
-					<li class=" tsd-kind-enum">
-						<a href="releasetype.html" class="tsd-kind-icon">Release<wbr>Type</a>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#firstline" class="tsd-kind-icon">first<wbr>Line</a>
 					</li>
-					<li class=" tsd-kind-interface">
-						<a href="../interfaces/console.html" class="tsd-kind-icon">Console</a>
-					</li>
-					<li class=" tsd-kind-interface">
-						<a href="../interfaces/filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-has-type-parameter">
-						<a href="../interfaces/options.html" class="tsd-kind-icon">Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-has-type-parameter">
-						<a href="../interfaces/process.html" class="tsd-kind-icon">Process</a>
-					</li>
-					<li class=" tsd-kind-type-alias">
-						<a href="../globals.html#semver" class="tsd-kind-icon">Sem<wbr>Ver</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../globals.html#bumppackageversions" class="tsd-kind-icon">bump<wbr>Package<wbr>Versions</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../globals.html#getreleasetype" class="tsd-kind-icon">get<wbr>Release<wbr>Type</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../globals.html#incsemver" class="tsd-kind-icon">inc<wbr>Sem<wbr>Ver</a>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#shebangcommand" class="tsd-kind-icon">shebang<wbr>Command</a>
 					</li>
 				</ul>
 			</nav>
@@ -226,7 +156,7 @@
 	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
-<script src="../assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
+<script src="assets/js/main.js"></script>
+<script>if (location.protocol == 'file:') document.write('<script src="assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
